--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -62,7 +62,7 @@
   },
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
-    "render": "node scripts/render.js",
+    "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
     "test:it": "mocha-parallel-tests --timeout 120000 ./test/it/**/*.spec.js",
     "coverage:generate": "coverage-tests create-tests --remote=$CVG_TESTS_REMOTE",
