--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -26,12 +26,7 @@
   "repository": "https://github.com/applitools/eyes.sdk.javascript1",
   "dependencies": {
     "@applitools/eyes-sdk-core": "11.0.4",
-    "@applitools/visual-grid-client": "14.4.3",
-    "css": "2.2.4",
-    "css-url-parser": "^1.1.3",
-    "is-absolute-url": "^2.1.0",
-    "request-promise-native": "^1.0.7",
-    "webdriverio": "~4.14.4"
+    "@applitools/visual-grid-client": "14.4.3"
   },
   "devDependencies": {
     "@applitools/sdk-coverage-tests": "1.0.0",
