--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -33,9 +33,7 @@
   "main": "./index.js",
   "dependencies": {
     "@applitools/eyes-sdk-core": "11.0.4",
-    "@applitools/visual-grid-client": "14.4.3",
-    "selenium-webdriver": "^4.0.0-alpha.5",
-    "webdriverio": "^5.18.6"
+    "@applitools/visual-grid-client": "14.4.3"
   },
   "devDependencies": {
     "@applitools/sdk-coverage-tests": "1.0.0",
