--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -8,7 +8,7 @@
     "vc": "bongo --verify-changelog",
     "uc": "bongo --update-changelog",
     "verify-commits": "bongo --verify-commits",
-    "lint": "eslint webpack.config.babel.js src/ --ext .js --ext .jsx",
+    "lint": "eslint webpack.config.babel.js src/ --ext .js --ext .jsx --no-eslintrc --config .eslintrc.js",
     "start": "webpack-dev-server --hot",
     "build": "yarn build:page && webpack",
     "build:prod": "rm -rf build && env NODE_ENV=production yarn build",
