fix protractor with nested node_modules

--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -52,6 +52,7 @@
     "cors": "^2.8.5",
     "mocha": "^7.2.0",
     "mocha-parallel-tests": "^2.3.0",
+    "ncp": "^2.0.0",
     "nock": "^12.0.3",
     "node-fetch": "^2.6.0",
     "protractor": "^7.0.0",
