--- a/packages/eyes-protractor/package.json
+++ b/packages/eyes-protractor/package.json
@@ -66,7 +66,7 @@
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha --timeout 120000 ./test/it/**/*.spec.js",
+    "test:it": "mocha --timeout 120000 \"./test/it/**/*.spec.js\"",
     "coverage:generate": "coverage-tests create-tests --remote=$CVG_TESTS_REMOTE",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
