--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -4,10 +4,6 @@
   "repository": "git@github.com:applitools/applitools-for-selenium-ide.git",
   "private": true,
   "scripts": {
-    "vv": "bongo --verify-versions",
-    "vc": "bongo --verify-changelog",
-    "uc": "bongo --update-changelog",
-    "verify-commits": "bongo --verify-commits",
     "lint": "eslint webpack.config.babel.js src/ --ext .js --ext .jsx --no-eslintrc --config .eslintrc.js",
     "start": "webpack-dev-server --hot",
     "build": "yarn build:page && webpack",
@@ -30,7 +26,7 @@
     "release:amo": "cd build && web-ext-submit",
     "release:cws": "cd build && webstore upload --auto-publish",
     "preversion": "bongo preversion",
-    "version": "node scripts/version.js && git add src/manifest.json && yarn uc && git add CHANGELOG.md"
+    "version": "node scripts/version.js && git add src/manifest.json"
   },
   "jest": {
     "moduleNameMapper": {
