aside: added missing bongo version call in version script

--- a/packages/side-eyes/package.json
+++ b/packages/side-eyes/package.json
@@ -26,7 +26,7 @@
     "release:amo": "cd build && web-ext-submit",
     "release:cws": "cd build && webstore upload --auto-publish",
     "preversion": "bongo preversion",
-    "version": "node scripts/version.js && git add src/manifest.json"
+    "version": "node scripts/version.js && git add src/manifest.json && bongo version"
   },
   "jest": {
     "moduleNameMapper": {
