--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -64,7 +64,7 @@
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
     "test:it": "mocha -r ./test/util/version-alias.js --timeout 120000 --parallel ./test/it/**/*.spec.js",
-    "coverage:generate": "coverage-tests create-tests --remote=$CVG_TESTS_REMOTE",
+    "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
     "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --parallel --jobs 15 {'./test/coverage/generic/*.spec.js','../sdk-coverage-tests/coverage-tests/custom/**/*.spec.js'}",
