--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -50,6 +50,7 @@
     "axios": "^0.19.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "chromedriver": "^83.0.0",
     "eslint": "^6.8.0",
     "geckodriver": "^1.19.1",
     "mocha": "^8.0.1",
