--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -36,7 +36,7 @@
     "@applitools/visual-grid-client": "14.4.8"
   },
   "peerDependencies": {
-    "webdriverio": ">=5.18.0"
+    "webdriverio": "5.0.0 - 6.x.x"
   },
   "devDependencies": {
     "@applitools/sdk-coverage-tests": "1.0.0",
@@ -51,18 +51,22 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chromedriver": "^83.0.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.2.0",
     "geckodriver": "^1.19.1",
     "mocha": "^8.0.1",
+    "module-alias": "^2.2.2",
     "shared-examples-for": "^0.1.3",
-    "spec-xunit-file": "0.0.1-3"
+    "spec-xunit-file": "0.0.1-3",
+    "webdriverio": "^6.0.0",
+    "webdriverio-5": "npm:webdriverio@^5.0.0",
+    "webdriverio-6": "npm:webdriverio@^6.0.0"
   },
   "scripts": {
     "lint": "eslint '**/*.js'",
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:unit && yarn test:it && yarn test:e2e && yarn test:service",
     "test:e2e": "mocha --no-timeouts \"test/+(TestClassicApi*.js|TestFluentApi*.js|TestVisualGrid*.js)\"",
-    "test:it": "mocha --no-timeouts \"test/it/*.js\"",
+    "test:it": "mocha -r ./test/util/version.alias.js --no-timeouts \"test/it/*.js\"",
     "test:service": "wdio \"test/service/wdio.conf.js\" && wdio \"test/service/no-config/wdio.no-config.conf.js\" && wdio \"test/service/vg/wdio.vg.conf.js\"",
     "test:unit": "mocha \"test/unit/**/*.js\"",
     "coverage:generate": "coverage-tests create-tests",
