--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -42,7 +42,8 @@
     "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
     "shared-examples-for": "^0.1.3",
-    "spec-xunit-file": "0.0.1-3"
+    "spec-xunit-file": "0.0.1-3",
+    "webdriverio": "~4.14.4"
   },
   "engines": {
     "node": ">=8.9.0"
