--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -30,7 +30,7 @@
     "test": "./test"
   },
   "main": "./index.js",
-  "typings": "./index.d.ts",
+  "typings": "./typings/index.d.ts",
   "dependencies": {
     "@applitools/dom-capture": "7.2.4",
     "@applitools/isomorphic-fetch": "3.0.0",
@@ -65,7 +65,6 @@
     "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
-    "types:build": "rm -f ./index.d.ts && tsc && echo \"declare module '@applitools/eyes-sdk-core' { import main = require('index'); export = main }\" >> ./index.d.ts",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification"
