--- a/packages/sdk-coverage-tests/.yarnrc
+++ b/packages/sdk-coverage-tests/.yarnrc
@@ -1,2 +1,2 @@
-version-tag-prefix: '@applitools/sdk-test-kit@'
-version-git-message: '@applitools/sdk-test-kit@%s'
+version-tag-prefix: '@applitools/sdk-coverage-tests@'
+version-git-message: '@applitools/sdk-coverage-tests@%s'
