--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -44,6 +44,9 @@
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-shared": "0.1.0",
+    "@types/selenium-webdriver": "^4.0.9",
+    "@types/selenium-webdriver-3": "npm:@types/selenium-webdriver@^3.0.17",
+    "@types/selenium-webdriver-4": "npm:@types/selenium-webdriver@^4.0.9",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
@@ -51,8 +54,9 @@
     "chromedriver": "^83.0.0",
     "mocha": "^8.0.1",
     "module-alias": "^2.2.2",
+    "selenium-webdriver": "^4.0.0-alpha.7",
     "selenium-webdriver-3": "npm:selenium-webdriver@^3.6.0",
-    "selenium-webdriver-4": "npm:selenium-webdriver@^4.0.0-alpha.5",
+    "selenium-webdriver-4": "npm:selenium-webdriver@^4.0.0-alpha.7",
     "spec-xunit-file": "0.0.1-3",
     "yargs": "^15.3.1"
   },
@@ -68,6 +72,7 @@
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
     "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --parallel --jobs 15 {'./test/coverage/generic/*.spec.js','../sdk-coverage-tests/coverage-tests/custom/**/*.spec.js'}",
+    "types:generate": "rm -rf ./typings && tsc",
     "preversion": "bongo preversion && yarn test && yarn coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion"
