--- a/packages/eyes-webdriverio-4/package.json
+++ b/packages/eyes-webdriverio-4/package.json
@@ -3,6 +3,7 @@
   "version": "2.17.1",
   "description": "Applitools Eyes SDK for WebdriverIO",
   "main": "index.js",
+  "typings": "./typings/index.d.ts",
   "scripts": {
     "lint": "eslint '**/*.js'",
     "render": "node ../sdk-shared/src/render.js",
@@ -29,10 +30,14 @@
     "@applitools/eyes-sdk-core": "11.0.10",
     "@applitools/visual-grid-client": "14.4.9"
   },
+  "peerDependencies": {
+    "webdriverio": "~4.14.4"
+  },
   "devDependencies": {
     "@applitools/sdk-coverage-tests": "1.0.0",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.1.0",
+    "@types/webdriverio": "^4.13.3",
     "axios": "^0.19.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -42,8 +47,7 @@
     "mocha": "^8.0.1",
     "node-fetch": "^2.6.0",
     "shared-examples-for": "^0.1.3",
-    "spec-xunit-file": "0.0.1-3",
-    "webdriverio": "~4.14.4"
+    "spec-xunit-file": "0.0.1-3"
   },
   "engines": {
     "node": ">=8.9.0"
