--- a/packages/sdk-shared/package.json
+++ b/packages/sdk-shared/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/applitools/eyes.sdk.javascript1/issues"
   },
   "dependencies": {
+    "@applitools/functional-commons": "1.5.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
