--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -13,9 +13,7 @@
     "test:it": "mocha --no-timeouts 'test/it/**/*.test.js'",
     "test:e2e": "mocha --no-timeouts 'test/e2e/**/*.test.js'",
     "lint": "eslint '**/*.js'",
-    "test": "yarn test:mocha && yarn lint && yarn msg:success || yarn msg:failure",
-    "msg:success": "notify -t 'Cypress tests Passed !!' -m 'Yaaaaaa !!!'",
-    "msg:failure": "notify -t 'Cypress tests Failed !!' -m 'Daaaamm !!!'",
+    "test": "yarn test:mocha && yarn lint",
     "cypress": "cd test/fixtures/testApp && cypress open --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js",
     "cypress:run": "cd test/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-run,pluginsFile=cypress/plugins/index-run.js,supportFile=cypress/support/index-run.js",
     "cypress:play": "cd test/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js --spec=cypress/integration-play/play.js",
@@ -64,7 +62,6 @@
     "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
-    "node-notifier-cli": "^1.2.0",
     "prettier": "^1.19.1",
     "typescript": "^3.9.2"
   }
