--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -53,7 +53,7 @@
     "chai-uuid": "1.0.6",
     "chromedriver": "^83.0.0",
     "jsdoc": "3.6.4",
-    "mocha": "7.0.1",
+    "mocha": "^8.0.1",
     "selenium-webdriver": "^4.0.0-alpha.5",
     "typescript": "^3.9.5"
   },
@@ -62,7 +62,7 @@
   },
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
-    "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
+    "test": "mocha --no-timeouts --parallel --jobs 15 \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
     "types:generate": "node ./scripts/build-typings",
