--- a/packages/snippets/package.json
+++ b/packages/snippets/package.json
@@ -5,22 +5,27 @@
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "lint": "eslint '**/*.js'",
-    "test": "mocha ./test/*"
+    "test": "mocha --no-timeouts --parallel --jobs 15 ./test/*",
+    "build": "node ./rollup/cli bundle --format json --format snippet",
+    "build:watch": "node ./rollup/cli watch --format json --format snippet"
   },
   "engines": {
     "ie": "10",
     "node": ">=8.9.0"
   },
   "devDependencies": {
+    "@applitools/sdk-shared": "^0.1.0",
     "@babel/preset-env": "^7.10.2",
     "@rollup/plugin-babel": "^5.0.3",
     "@rollup/plugin-commonjs": "^13.0.0",
+    "chalk": "^4.1.0",
     "glob": "^7.1.6",
     "mocha": "^8.0.1",
     "playwright": "^1.1.1",
     "rollup": "^2.16.1",
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-terser": "^6.1.0",
-    "yargs": "^15.3.1"
+    "yargs": "^15.3.1",
+    "webdriverio": "^6.1.24"
   }
 }
