--- a/packages/eyes-images/package.json
+++ b/packages/eyes-images/package.json
@@ -37,11 +37,11 @@
     "@applitools/sdk-release-kit": "0.1.0",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
-    "mocha": "^6.2.2"
+    "mocha": "^8.0.1"
   },
   "scripts": {
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
-    "test": "mocha --no-timeouts \"test/**/*.spec.js\"",
+    "test": "mocha --no-timeouts --parallel --jobs 15 \"test/**/*.spec.js\"",
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification"
