--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -31,7 +31,7 @@
     "test": "./test"
   },
   "main": "./index.js",
-  "types": "./typings/index.js",
+  "types": "./typings/index.d.ts",
   "dependencies": {
     "@applitools/eyes-sdk-core": "11.3.4",
     "@applitools/visual-grid-client": "14.5.7"
@@ -56,7 +56,10 @@
     "geckodriver": "^1.19.1",
     "mocha": "^8.0.1",
     "shared-examples-for": "^0.1.3",
-    "spec-xunit-file": "0.0.1-3"
+    "spec-xunit-file": "0.0.1-3",
+    "webdriverio": "^6.2.0",
+    "webdriverio-5": "npm:webdriverio@^5.18.0",
+    "webdriverio-6": "npm:webdriverio@^6.2.0"
   },
   "scripts": {
     "lint": "eslint '**/*.js'",
