--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -57,6 +57,7 @@
     "mocha": "^8.0.1",
     "shared-examples-for": "^0.1.3",
     "spec-xunit-file": "0.0.1-3",
+    "typescript": "^3.9.6",
     "webdriverio": "^6.2.0",
     "webdriverio-5": "npm:webdriverio@^5.18.0",
     "webdriverio-6": "npm:webdriverio@^6.2.0"
@@ -73,7 +74,7 @@
     "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
     "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-webdriverio-5' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --no-timeouts --reporter spec-xunit-file --parallel --jobs 15 {'./test/coverage/generic/*.spec.js','../sdk-coverage-tests/coverage-tests/custom/**/*.spec.js'}",
-    "types:generate": "rm -rf ./typings && tsc --declaration --declarationDir ./typings --allowJs --emitDeclarationOnly ./index.js && node ./scripts/fix-typings.js",
+    "types:generate": "rm -rf ./typings && tsc --declaration --declarationDir ./typings --allowJs --emitDeclarationOnly ./index.js && node ./scripts/fix-typings.js && tsc --noEmit ./typings/index.d.ts",
     "preversion": "bongo preversion && yarn types:generate && yarn test && yarn coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion"
