--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -68,14 +68,15 @@
     "test": "yarn test:it",
     "test:it": "mocha -r ./test/util/version-alias.js --timeout 120000 --parallel ./test/it/**/*.spec.js",
     "coverage:generate": "coverage-tests create-tests",
-    "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
-    "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
+    "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && yarn coverage:report",
+    "coverage:prod": "yarn coverage:generate && yarn test:coverage && yarn coverage:report:prod",
     "coverage:report": "(export QA_REPORT_ID=$(uuidgen) ; yarn coverage:report:generic && yarn coverage:report:custom )",
-    "coverage:report:generic": "coverage-tests process-report --id ${QA_REPORT_ID} -v",
-    "coverage:report:custom": "coverage-tests process-report --id ${QA_REPORT_ID} --reportName coverage-test-custom-report.xml --no-g -v",
-    "test:coverage": "( export APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' export APPLITOOLS_BATCH_ID=$(uuidgen) ; yarn test:coverage:generic ; yarn test:coverage:custom )",
-    "test:coverage:generic": "XUNIT_FILE=coverage-test-report.xml mocha -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --parallel --jobs 7 ./test/coverage/generic/*.spec.js",
-    "test:coverage:custom": "XUNIT_FILE=coverage-test-custom-report.xml mocha -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --parallel --jobs 7 '../sdk-coverage-tests/coverage-tests/custom/**/*.spec.js'",
+    "coverage:report:prod": "(export QA_REPORT_ID=$(uuidgen) ; yarn coverage:report:generic -- --send-report prod && yarn coverage:report:custom -- --send-report prod )",
+    "coverage:report:generic": "coverage-tests process-report --id ${QA_REPORT_ID}",
+    "coverage:report:custom": "coverage-tests process-report --id ${QA_REPORT_ID} --reportName coverage-test-custom-report.xml --no-g",
+    "test:coverage": "( export APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' export APPLITOOLS_BATCH_ID=$(uuidgen) ; yarn test:coverage:generic && yarn test:coverage:custom )",
+    "test:coverage:generic": "XUNIT_FILE=coverage-test-report.xml mocha -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --parallel --jobs 15 ./test/coverage/generic/*.spec.js",
+    "test:coverage:custom": "XUNIT_FILE=coverage-test-custom-report.xml mocha -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --parallel --jobs 15 '../sdk-coverage-tests/coverage-tests/custom/**/*.spec.js'",
     "types:generate": "rm -rf ./typings && tsc --declaration --declarationDir ./typings --allowJs --emitDeclarationOnly ./index.js",
     "preversion": "bongo preversion && yarn types:generate && yarn test && yarn coverage:prod",
     "version": "bongo version",
