--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -54,6 +54,7 @@
     "chromedriver": "^83.0.0",
     "jsdoc": "3.6.4",
     "mocha": "^8.0.1",
+    "ncp": "^2.0.0",
     "selenium-webdriver": "^4.0.0-alpha.5",
     "typescript": "^3.9.5"
   },
