--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
       "packages/eyes-leanft",
       "packages/side-eyes",
       "packages/sdk-shared",
-      "packages/snippets"
+      "packages/snippets",
+      "packages/eyes-playwright"
     ],
     "nohoist": [
       "**/@wdio/*",
@@ -42,7 +43,8 @@
       "**/protractor/**",
       "**/selenium-webdriver",
       "**/selenium-webdriver-3",
-      "**/selenium-webdriver-4"
+      "**/selenium-webdriver-4",
+      "**/playwright"
     ]
   },
   "scripts": {
