--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -66,11 +66,11 @@
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha -r ./test/util/version-alias.js --timeout 120000 --parallel ./test/it/**/*.spec.js",
+    "test:it": "mocha ./test/it/**/*.spec.js",
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --parallel --jobs 15 {'./test/coverage/generic/*.spec.js','../sdk-coverage-tests/coverage-tests/custom/**/*.spec.js'}",
+    "test:coverage": "mocha --config .mocharc.coverage.js",
     "types:generate": "rm -rf ./typings && tsc --declaration --declarationDir ./typings --allowJs --emitDeclarationOnly ./index.js",
     "preversion": "bongo preversion && yarn types:generate && yarn test && yarn coverage:prod",
     "version": "bongo version",
