--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -53,6 +53,7 @@
     "chromedriver": "^83.0.0",
     "mocha": "^8.0.1",
     "module-alias": "^2.2.2",
+    "ncp": "^2.0.0",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "selenium-webdriver-3": "npm:selenium-webdriver@^3.6.0",
     "selenium-webdriver-4": "npm:selenium-webdriver@^4.0.0-alpha.7",
