Fix to support building with Node 12 or higher when the wdio4-service is part of the workspace (e.g., the wdio4-service had dependencies which relied on an older version of fibers which won't work on > Node 10).

--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -24,8 +24,8 @@
     "mocha": "^6.2.2",
     "wdio-chromedriver-service": "^0.1.5",
     "wdio-dot-reporter": "0.0.10",
-    "wdio-mocha-framework": "^0.6.4",
-    "wdio-sync": "^0.7.3",
+    "wdio-mocha-framework": "applitools/wdio-mocha-framework",
+    "wdio-sync": "webdriverio-boneyard/wdio-sync",
     "webdriverio": "^4.14.4"
   },
   "engines": {
