--- a/packages/eyes-webdriverio-4-service/package.json
+++ b/packages/eyes-webdriverio-4-service/package.json
@@ -24,11 +24,11 @@
     "mocha": "^6.2.2",
     "wdio-chromedriver-service": "^0.1.5",
     "wdio-dot-reporter": "0.0.10",
-    "wdio-mocha-framework": "applitools/wdio-mocha-framework",
-    "wdio-sync": "webdriverio-boneyard/wdio-sync",
+    "wdio-mocha-framework": "^0.6.4",
+    "wdio-sync": "^0.7.3",
     "webdriverio": "^4.14.4"
   },
   "engines": {
-    "node": ">=8.9.0"
+    "node": ">=8.9.0 <12"
   }
 }
