--- a/.eslintrc
+++ b/.eslintrc
@@ -9,8 +9,8 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "extends": ["plugin:node/recommended"],
-  "plugins": ["prettier", "mocha-no-only", "node"],
+  "extends": ["plugin:node/recommended", "plugin:testcafe/recommended"],
+  "plugins": ["prettier", "mocha-no-only", "node", "testcafe", "node/recommended"],
   "ignorePatterns": [
     "node_modules/",
     "dist/",
