--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-mocha-no-only": "^1.1.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-testcafe": "^0.2.1",
     "js-yaml": "^3.13.1",
     "open": "^7.0.3",
     "prettier": "^1.18.2",
