--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -31,7 +31,6 @@
     "test": "./test"
   },
   "main": "./index.js",
-  "types": "./typings/index.js",
   "dependencies": {
     "@applitools/eyes-sdk-core": "11.5.0",
     "@applitools/visual-grid-client": "14.6.0"
@@ -52,12 +51,11 @@
     "lint": "eslint '**/*.js'",
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha --no-timeouts \"test/it/*.js\"",
+    "test:it": "mocha --no-timeouts ./test/it/*.spec.js",
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --no-timeouts --reporter spec-xunit-file --parallel --jobs 15 {'./test/coverage/generic/*.spec.js','../sdk-coverage-tests/coverage-tests/custom/**/*.spec.js'}",
-    "types:generate": "rm -rf ./typings && tsc --declaration --declarationDir ./typings --allowJs --emitDeclarationOnly ./index.js",
+    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "preversion": "bongo preversion && yarn types:generate && yarn test && yarn coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion"
