--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -35,17 +35,15 @@
     "test": "./test"
   },
   "main": "./index.js",
-  "typings": "./typings/index.d.ts",
   "dependencies": {
     "@applitools/eyes-sdk-core": "11.5.0",
     "@applitools/visual-grid-client": "14.6.0"
   },
   "devDependencies": {
-    "@applitools/sdk-coverage-tests": "1.0.9",
+    "@applitools/sdk-coverage-tests": "1.0.12",
     "@applitools/sdk-fake-eyes-server": "^2.0.0",
     "@applitools/sdk-release-kit": "0.1.0",
     "@applitools/sdk-shared": "0.1.0",
-    "@types/selenium-webdriver": "^4.0.9",
     "assert-rejects": "^1.0.0",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
@@ -67,12 +65,11 @@
     "lint": "eslint . --ext .js --no-eslintrc --config ../../.eslintrc",
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
-    "test:it": "mocha -r ./test/util/version-alias.js --timeout 120000 --parallel ./test/it/**/*.spec.js",
+    "test:it": "mocha -r ./test/util/version-alias.js --timeout 120000 './test/it/**/*.spec.js'",
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "yarn coverage:generate && yarn test:coverage && coverage-tests process-report --send-report prod",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha -r ./test/util/version-alias.js --no-timeouts --reporter spec-xunit-file --parallel --jobs 15 --grep 'AppiumAndroidCheckRegion' --invert {'./test/coverage/generic/*.spec.js','../sdk-coverage-tests/coverage-tests/custom/**/*.spec.js'}",
-    "types:generate": "rm -rf ./typings && tsc --declaration --declarationDir ./typings --allowJs --emitDeclarationOnly ./index.js",
+    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "preversion": "bongo preversion && yarn test && yarn coverage:prod",
     "version": "bongo version",
     "postversion": "bongo postversion"
