--- a/packages/eyes-playwright/package.json
+++ b/packages/eyes-playwright/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/eyes-playwright",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Applitools Eyes SDK for Playwright",
   "keywords": [
     "eyes-playwright",
@@ -56,10 +56,7 @@
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
-    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
-    "preversion": "bongo preversion && yarn test && yarn coverage:prod",
-    "version": "bongo version",
-    "postversion": "bongo postversion"
+    "test:coverage": "APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js"
   },
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
