tc: added script to run tests in headed mode

--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -8,8 +8,10 @@
     "render": "node ../sdk-shared/src/render.js",
     "test": "yarn test:it",
     "test:debug": "yarn test:it:debug",
+    "test:full": "yarn test:it:full",
     "test:it": "testcafe chrome:headless ./test/it/*.spec.js",
     "test:it:debug": "testcafe --inspect-brk chrome:headless ./test/it/*.spec.js",
+    "test:it:full": "testcafe chrome ./test/it/*.spec.js",
     "coverage:generate": "coverage-tests create-tests",
     "coverage:sandbox": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report",
     "coverage:prod": "coverage-tests create-tests && yarn test:coverage && coverage-tests process-report --send-report prod",
