add eslint rule for no-debugger

--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
     "constructor-super": "warn",
     "valid-typeof": "warn",
     "mocha-no-only/mocha-no-only": "error",
-    "node/no-unpublished-require": ["off"]
+    "node/no-unpublished-require": ["off"],
+    "no-debugger": "error"
   }
 }
