tc: add `@applitools/` prefix to package name

--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eyes-testcafe",
+  "name": "@applitools/eyes-testcafe",
   "version": "2.1.0",
   "description": "Applitools Eyes SDK for TestCafe",
   "main": "index.js",
